# Mock-Project-Device-Fleet-Management-Service

./: .gitignore  README.md
backend/: CMakeLists.txt  Dockerfile
backend/include/: DeviceFleetImpl.h
backend/scripts/: build.sh  common.sh  run_tests.sh
backend/src/: CMakeLists.txt  main.cpp
backend/src/DeviceFleetImpl/: CMakeLists.txt
backend/tests/: CMakeLists.txt
backend/tests/DeviceFleetImpl/: DeviceFleetImpl.cpp
proto/: DeviceFleet.proto  Dockerfile  build_proto.sh
